Fix input sizing and submit button alignment

--- a/vscode/webviews/Chat.module.css
+++ b/vscode/webviews/Chat.module.css
@@ -58,7 +58,7 @@
 
 .submit-button,
 .submit-button-disabled {
-    margin-bottom: 0.125rem;
+    margin-bottom: 0.0625rem;
 }
 
 .submit-button[disabled] {
